[package]
name = "radio-rs"
version = "2.0.2"
edition = "2021"
authors = ["Ankur Mallick <ankurmallick80@gmail.com>"]
license = "MIT"
repository = "https://github.com/AnkurMal/radio"
description = "A very simple, high level, audio playback library, ported from raudio library, for games."
build = "build.rs"

[dependencies]
macroquad = "0.4.13"